--- a/.gitignore
+++ b/.gitignore
@@ -22,8 +22,9 @@ wheels/
 
 # Virtual Environment
 venv/
-env/
 ENV/
+env/
+.env
 
 # IDE
 .idea/
@@ -31,21 +32,17 @@ ENV/
 *.swp
 *.swo
 
-# Environment variables
-.env
-.env.local
-.env.*.local
-
-# Logs
-*.log
-logs/
-
 # OS
 .DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
 Thumbs.db
 
-# Streamlit
-.streamlit/
-
-# Snowflake
-snowflake_connection.json 
+# Project specific
+*.log
+.coverage
+htmlcov/
+.pytest_cache/ 
